kubernetes/k10/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k10
  namespace: kasten-io
  annotations:
    nginx.ingress.kubernetes.io/app-root: /k10/
spec:
  ingressClassName: nginx
  rules:
    - host: k10.nodadyoushutup.com
      http:
        paths:
          - path: /k10
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80
